Fix for the Service bureaus title overlapping.

--- a/full_rubik_style.scss
+++ b/full_rubik_style.scss
@@ -776,6 +776,16 @@ div.panel-pane div.node.boxed {
   }
 }
 
+.pane-node-field-service-bureaus {
+  padding-top: 1em;
+  @include breakpoint(992px) {
+    padding-top: 3em;
+  }
+  @include breakpoint(1065px) {
+    padding-top: 1em;
+  }
+}
+
 .field-collection-view .entity-field-collection-item {
   display: inline-block;
   width: 70%;
